--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,13 @@ body {
     font-family: "Secular One", sans-serif;
     font-weight: 400;
     font-size: 20px;
-    display: block;
     color: antiquewhite;
     text-decoration: none;
     background-image: url(../images/shadowfell\ forest.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    position: absolute;
+    text-shadow: 0 0 5px black;
 }
 
 li, a {
@@ -30,8 +31,11 @@ li, a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 10%;
+    padding: 10px 10%;
     background-color: darkslategray;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .logo {
@@ -55,45 +59,78 @@ li, a {
     text-shadow: 0 0 2px antiquewhite;
 }
 
-/*body {
-    font-family: "Secular One", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    display:block;
-    color: antiquewhite;
-    text-decoration: none;
-} */
 main {
     display:flex;
-    flex-direction:column;
-    flex-wrap:wrap;
-    padding: 60px;
+    flex-wrap:wrap; 
 }
-.portrait {
+
+.header {
     display:flex;
-    width:500px;
-    margin: 50px;
-    border-radius:50px;
+    flex-basis: 100%;
+    justify-content:space-evenly;
+    
+}
+.header .portrait {
+    display: flex;
+    flex: 1 1 100px;
+    height:90%;
+    margin:50px 50px;
+    border-radius:600px;
+    box-shadow: 0 2px 10px black;
+    
+}
+.header .h1 {
+    flex: 2 1;
+    padding: 20px;
+    margin:20px;
+    align-self: center;
+}
+.container {
+    text-align: center;
+}
+aside { 
+    flex: 1 1 20%;
+    background-color: darkslategray;
+    padding: 100px;
+}
+
+
+section {
+    flex: 1 1 80%;
+    background-color: antiquewhite;
+    color: darkslategray;
+    text-shadow: 0 0 1px;
+    padding: 50px;
     
 }
 
-.container {
-    display:flex;
-    align-items:center;
-    justify-content:space-evenly;
-}
-
-/* .about-me {
-
-    justify-content:space-between;
-    background-color:darkslategray;
-    margin-block-end: 50px;
-
-}
-*/
-aside {
-    flex-direction:row;
-    flex: 1;
-    background-color: darkslategray;
+section p {
     padding: 20px;
+}
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.flex-container h1, .flex-container p {
+    display: flex;
+    width: 100%;
+    justify-content:center;
+}
+.rest {
+    min-height:150px;
+    flex-grow: 1;
+    border: 2px solid darkslategray;
+    width: 15%;
+    margin: 10px;
+    background-color: brown;
+}
+.first {
+    display: flex;
+    flex-direction: column;
+    min-height:500px;
+    width:100%;
+    border: 2px solid darkslategray;
+    margin: 10px;
+    background-color: brown;
+    align-items: center;
 }
