--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,18 +92,27 @@ main {
 }
 aside { 
     flex: 1 1 20%;
+    flex-direction: row;
     background-color: darkslategray;
-    padding: 100px;
+    padding: 80px;
     justify-content: stretch;
+    align-items: center;
 }
-
+body main aside img {
+    flex: 1 1 0;
+    width:100%;
+    max-width: 175px;
+}
 
 section {
     flex: 1 1 80%;
     background-color: antiquewhite;
     color: darkslategray;
     text-shadow: 0 0 1px;
-    padding: 50px;
+    padding: 70px;
+    align-content: center;
+    
+    background-image: linear-gradient(to right, darkslategray,antiquewhite,antiquewhite,);
     
 }
 
@@ -111,33 +120,55 @@ section p {
     padding: 20px;
 }
 .flex-container {
+    flex: 1 0 auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-flow:row wrap;
+    width:80%;
+    height: auto;
+    padding: 0 6px;
+    float: left;
+    
+    align-items: flex-start;
 }
 .flex-container h1, .flex-container p {
     display: flex;
+    flex-wrap:wrap;
     width: 100%;
     justify-content:center;
-}
-.rest {
-    min-height:150px;
-    flex-grow: 1;
-    border: 2px solid darkslategray;
-    width: 15%;
-    margin: 10px;
-    background-color: brown;
-}
-.first {
-    display: flex;
-    flex-direction: column;
-    min-height:500px;
-    width:75%;
-    border: 2px solid darkslategray;
-    margin: 10px;
-    background-color: brown;
-    align-items: center;
+     
 }
 
+#thumbnails-first {
+    display:flex;
+    width:100%;
+    box-shadow: 0 2px 10px black;
+}
+#thumbnails-first:hover {
+    opacity:.3;
+    transition: .5s ease;
+
+}
+#thumbnails-rest {
+    display:inline;
+    flex: 1 2 0;
+    width:50%;
+    margin: 5%;
+    box-shadow: 0 2px 10px black;
+}
+#thumbnails-rest:hover {
+    opacity:.3;
+    transition: .5s ease;
+}
+#contacts {
+    width:100%;
+}
+.contact-section {
+    align-content:center;
+}
+a {
+    display:flex;
+    width: 30%;
+}
 @media screen and (max-width: 992px) {
 
     
