--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,230 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: antiquewhite;
+  text-decoration: none;
+  background-image: url(../images/shadowfell\ forest.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  text-shadow: 0 0 5px black;
+  flex: none;
+}
+
+li,
+a {
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: antiquewhite;
+  text-decoration: none;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: darkslategray;
+  top: 0;
+  width: 100%;
+}
+
+.logo {
+  width: 66px;
+}
+
+.nav-links {
+  list-style: none;
+}
+.nav-links li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.nav-links li a {
+  transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+  color: teal;
+  text-shadow: 0 0 2px antiquewhite;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header {
+  display: flex;
+  flex-basis: 100%;
+  justify-content: space-evenly;
+}
+.header .portrait {
+  display: flex;
+  flex: 1 1 0;
+  width: 20%;
+  height: 90%;
+  margin: 50px 50px;
+  border-radius: 600px;
+  box-shadow: 0 2px 10px black;
+}
+.header .h1 {
+  flex: 2 1;
+  padding: 20px;
+  margin: 20px;
+  align-self: center;
+}
+.container {
+  text-align: center;
+  align-content: center;
+}
+aside {
+  flex: 1 0 20%;
+  flex-direction: row;
+  background-color: darkslategray;
+  padding: 80px;
+  width: 20%;
+  min-width: 20%;
+  justify-content: stretch;
+  align-items: center;
+  text-align: center;
+}
+body main aside img {
+  flex: 1 1;
+  min-width: 100px;
+  width: 100%;
+  max-width: 300px;
+  min-height: 100px;
+  align-self: center;
+  padding-top: 50%;
+}
+
+section {
+  flex: 1 1 80%;
+  background-color: antiquewhite;
+  min-width: 80%;
+  color: darkslategray;
+  text-shadow: 0 0 1px;
+  padding: 70px;
+  align-content: center;
+  background-image: linear-gradient(
+    to right,
+    darkslategray,
+    antiquewhite,
+    antiquewhite
+  );
+}
+section h1 {
+  padding: 20px;
+}
+section p {
+  padding: 20px;
+}
+.flex-container {
+  flex: 1 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  width: 80%;
+  height: auto;
+  padding: 0 6px;
+  float: left;
+
+  align-items: flex-start;
+}
+.flex-container h1,
+.flex-container p {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+#thumbnails-first {
+  display: flex;
+  width: 100%;
+  box-shadow: 0 2px 10px black;
+}
+#thumbnails-first:hover {
+  opacity: 0.3;
+  transition: 0.5s ease;
+}
+#thumbnails-rest {
+  display: inline;
+  flex: 1 2 0;
+  width: 50%;
+  margin: 5%;
+  box-shadow: 0 2px 10px black;
+}
+#thumbnails-rest:hover {
+  opacity: 0.3;
+  transition: 0.5s ease;
+}
+#contacts {
+  width: 100%;
+}
+.contact-section {
+  align-content: center;
+  min-height: 500px;
+}
+a {
+  display: flex;
+  width: 30%;
+}
+
+footer {
+  background-color: darkslategray;
+  text-align: center;
+  width: 100%;
+}
+@media screen and (max-width: 992px) {
+  body {
+    font-family: "Secular One", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: antiquewhite;
+    text-decoration: none;
+    background-image: url(../images/shadowfell\ forest.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    text-shadow: 0 0 5px black;
+    flex: none;
+  }
+
+  .portrait {
+    display: block;
+    width: 25%;
+    height: 20%;
+  }
+  aside {
+    width: auto;
+    font-size: 15px;
+  }
+  section {
+    width: auto;
+    font-size: 15px;
+  }
+  section h1 {
+    padding: 20px;
+  }
+  section p {
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
     font-family: "Secular One", sans-serif;
     font-weight: 400;
     font-size: 20px;
@@ -17,253 +235,35 @@ body {
     background-size: cover;
     position: absolute;
     text-shadow: 0 0 5px black;
-    flex:none;
-}
+    flex: block;
+  }
 
-li, a {
-    font-family: "Secular One", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    color: antiquewhite;
-    text-decoration: none;
-}
-
-.navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10%;
-    background-color: darkslategray;
-    top: 0;
-    width: 100%;
-}
-
-.logo {
-    width: 66px;
-}
-
-.nav-links {
-    list-style: none;
-}
-.nav-links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav-links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav-links li a:hover {
-    color: teal;
-    text-shadow: 0 0 2px antiquewhite;
-}
-
-main {
-    display:flex;
-    flex-wrap:wrap; 
-}
-
-.header {
-    display:flex;
-    flex-basis: 100%;
-    justify-content:space-evenly;
-    
-}
-.header .portrait {
-    display: flex;
-    flex: 1 1 0;
-    width:20%;
-    height:90%;
-    margin:50px 50px;
-    border-radius:600px;
-    box-shadow: 0 2px 10px black;
-    
-}
-.header .h1 {
-    flex: 2 1;
-    padding: 20px;
-    margin:20px;
-    align-self: center;
-}
-.container {
-    text-align: center;
-    align-content:center;
-
-}
-aside { 
-    flex: 1 0 20%;
-    flex-direction: row;
+  aside {
+    flex-direction: row wrap;
     background-color: darkslategray;
     padding: 80px;
-    width: 20%;
+    width: 100%;
     min-width: 20%;
     justify-content: stretch;
     align-items: center;
     text-align: center;
-}
-body main aside img {
-    flex: 1 1;
-    min-width: 100px;
-    width:100%;
-    max-width: 300px;
-    min-height: 100px;
-    align-self: center;
-    padding-top: 50%;
-}
+    flex-flow: column;
+  }
 
-section {
+  section {
     flex: 1 1 80%;
     background-color: antiquewhite;
-    min-width: 80%;
+    /* min-width: 80%; */
+    width: 100%;
     color: darkslategray;
     text-shadow: 0 0 1px;
     padding: 70px;
     align-content: center;
-    background-image: linear-gradient(to right, darkslategray,antiquewhite,antiquewhite,);
-    
-}
-section h1 {
-    padding:20px;
-}
-section p {
-    padding: 20px;
-}
-.flex-container {
-    flex: 1 0 auto;
-    display: flex;
-    flex-flow:row wrap;
-    width:80%;
-    height: auto;
-    padding: 0 6px;
-    float: left;
-    
-    align-items: flex-start;
-}
-.flex-container h1, .flex-container p {
-    display: flex;
-    flex-wrap:wrap;
-    width: 100%;
-    justify-content:center;
-     
-}
-
-#thumbnails-first {
-    display:flex;
-    width:100%;
-    box-shadow: 0 2px 10px black;
-}
-#thumbnails-first:hover {
-    opacity:.3;
-    transition: .5s ease;
-
-}
-#thumbnails-rest {
-    display:inline;
-    flex: 1 2 0;
-    width:50%;
-    margin: 5%;
-    box-shadow: 0 2px 10px black;
-}
-#thumbnails-rest:hover {
-    opacity:.3;
-    transition: .5s ease;
-}
-#contacts {
-    width:100%;
-}
-.contact-section {
-    align-content:center;
-    min-height: 500px;
-}
-a {
-    display:flex;
-    width: 30%;
-}
-
-footer {
-    background-color: darkslategray;
-    text-align:center;
-    width:100%;
-}
-@media screen and (max-width: 992px) {
-
-    
-    body {
-        font-family: "Secular One", sans-serif;
-        font-weight: 400;
-        font-size: 15px;
-        color: antiquewhite;
-        text-decoration: none;
-        background-image: url(../images/shadowfell\ forest.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: absolute;
-        text-shadow: 0 0 5px black;
-        flex:none;
-    }
-
-    .portrait {
-    display:block;
-    width: 25%;
-    height: 20%;
-
-    }
-    aside {
-        width:auto;
-        font-size: 15px;
-    }
-    section {
-        width:auto;
-        font-size: 15px;
-    }
-    section h1 {
-        padding:20px;
-    }
-    section p {
-        padding: 20px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    body {
-        font-family: "Secular One", sans-serif;
-        font-weight: 400;
-        font-size: 20px;
-        color: antiquewhite;
-        text-decoration: none;
-        background-image: url(../images/shadowfell\ forest.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: absolute;
-        text-shadow: 0 0 5px black;
-        flex:block;
-    }
-    
-    aside { 
-        
-        flex-direction: row wrap;
-        background-color: darkslategray;
-        padding: 80px;
-        width: 100%;
-        min-width: 20%;
-        justify-content: stretch;
-        align-items: center;
-        text-align: center;
-        flex-flow:column;
-    }
-
-    section {
-        flex: 1 1 80%;
-        background-color: antiquewhite;
-        /* min-width: 80%; */
-        width:100%;
-        color: darkslategray;
-        text-shadow: 0 0 1px;
-        padding: 70px;
-        align-content: center;
-        background-image: linear-gradient(to right, darkslategray,antiquewhite,antiquewhite,);
-        
-    }
-
+    background-image: linear-gradient(
+      to right,
+      darkslategray,
+      antiquewhite,
+      antiquewhite
+    );
+  }
 }
