--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,11 @@ body {
   width: 100%;
 }
 
+.nav-links li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
 li,
 a {
   font-family: "Secular One", sans-serif;
@@ -53,6 +58,7 @@ aside {
   flex: 1 0 20%;
   float: inline-start;
   justify-content: center;
+  padding: 25px;
 }
 
 section {
@@ -60,6 +66,7 @@ section {
   color: darkslategray;
   flex: 1 0 80%;
   text-shadow: none;
+  padding: 25px;
 }
 
 .container {
@@ -111,4 +118,16 @@ section {
 .contact-section {
   align-content: center;
   min-height: 500px;
+}
+
+.form-fillable {
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+}
+
+.button {
+  background-color: darkslategray;
+  color: antiquewhite;
+  font-family: "Secular One", sans-serif;
 }
