--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,6 +51,20 @@ header {
   padding: 50px;
 }
 
+.portrait {
+  width: 20%;
+  display: flex;
+  flex: 1 1 0;
+  border-radius: 600px;
+}
+
+header .h1 {
+  flex: 2 1;
+  padding: 20px;
+  margin: 20px;
+  align-self: center;
+}
+
 aside {
   display: flex;
   flex-direction: column;
@@ -130,4 +144,33 @@ section {
   background-color: darkslategray;
   color: antiquewhite;
   font-family: "Secular One", sans-serif;
+}
+
+footer {
+  background-color: darkslategray;
+  text-align: center;
+  width: 100%;
+}
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .mini-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .portrait {
+    width: 70%;
+    display: flex;
+    flex: 1 1 0;
+    border-radius: 600px;
+  }
 }
