--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,15 @@ a {
   text-decoration: none;
 }
 
+.nav-links li a {
+  transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+  color: teal;
+  text-shadow: 0 0 2px antiquewhite;
+}
+
 header {
   background-color: black;
   display: flex;
@@ -98,10 +107,7 @@ section {
   display: flex;
 }
 
-/* .thumbnails {
-  display: block;
-  justify-content:space-around;
-} */
+
 #thumbnails-first {
   display: inline;
   justify-content: center;
@@ -177,11 +183,29 @@ footer {
     align-items: center;
     justify-content: space-evenly;
   }
+
+  aside h1 {
+    font-size: 50px;
+  }
+
   .portrait {
     width: 70%;
     display: flex;
     flex: 1 1 0;
     border-radius: 600px;
+  }
+
+  .thumbnails {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #thumbnails-rest {
+    width: 50%;
+  }
+
+  #thumbnails-rest:hover {
+    width: 70%;
   }
 }
 
@@ -191,5 +215,13 @@ footer {
     display: flex;
     flex: 1 1 0;
     border-radius: 600px;
+  }
+
+  #thumbnails-rest {
+    width: 100%;
+  }
+
+  #thumbnails-rest:hover {
+    width: 80%;
   }
 }
