--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,7 +192,7 @@ footer {
 
 } */
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   header {
     display: flex;
     flex-direction: column;
@@ -235,19 +235,39 @@ footer {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
+  nav {
+    display: flex;
+    margin: 15px;
+    justify-content: space-between;
+  }
+  .nav-links li a {
+    font-size: 50px;
+  }
   .portrait {
-    width: 90%;
+    width: 80%;
     display: flex;
     flex: 1 1 0;
     border-radius: 600px;
   }
 
+  section {
+    padding: 25px;
+  }
+
+  #thumbnails-first {
+    width: 90%;
+  }
+
   #thumbnails-rest {
-    width: 100%;
+    width: 70%;
   }
 
   #thumbnails-rest:hover {
     width: 80%;
+  }
+
+  .label-text {
+    font-size: 30px;
   }
 }
