--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,9 +188,41 @@ footer {
   width: 100%;
 }
 
-/* @media screen and (max-width: 992px) {
+@media only screen and (max-width: 480px) {
+  .nav-links li a {
+    margin: 5px;
+    font-size: 20px;
+  }
+  .portrait {
+    width: 80%;
+    display: flex;
+    flex: 1 1 0;
+    border-radius: 600px;
+  }
 
-} */
+  .h1 {
+    font-size: 30px;
+  }
+  section {
+    padding: 25px;
+  }
+
+  #thumbnails-first {
+    width: 90%;
+  }
+
+  #thumbnails-rest {
+    width: 70%;
+  }
+
+  #thumbnails-rest:hover {
+    width: 80%;
+  }
+
+  .label-text {
+    font-size: 30px;
+  }
+}
 
 @media only screen and (max-width: 768px) {
   header {
@@ -232,42 +264,5 @@ footer {
 
   #thumbnails-rest:hover {
     width: 70%;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  nav {
-    display: flex;
-    margin: 15px;
-    justify-content: space-between;
-  }
-  .nav-links li a {
-    font-size: 50px;
-  }
-  .portrait {
-    width: 80%;
-    display: flex;
-    flex: 1 1 0;
-    border-radius: 600px;
-  }
-
-  section {
-    padding: 25px;
-  }
-
-  #thumbnails-first {
-    width: 90%;
-  }
-
-  #thumbnails-rest {
-    width: 70%;
-  }
-
-  #thumbnails-rest:hover {
-    width: 80%;
-  }
-
-  .label-text {
-    font-size: 30px;
   }
 }
